--- a/code/style.css
+++ b/code/style.css
@@ -1,360 +1,330 @@
 body {
 
-  font-family:  'Open Sans', sans-serif;
   margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+
+  
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 8%;
+  height: 150px;
+  line-height: 75px;
+  background: rgb(255, 254, 254);
+  align-items: center;
+  
+}
+
+nav .logo {
+  max-width: 120px;
+
 
 }
 
-section#big-news {
+nav .navbar-brand .navbar-logo {
+  color:rgb(125, 31, 137);
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: .5px;
 
-  
-  height: 600px;
+}
+
+nav .nav-list {
+  display: flex;
+  list-style: none;
+
+}
+
+/* the part below makes the list section more to the right, not closer to the centre - because of passing 30)*/
+nav .nav-list .nav-item {
+  cursor: crosshair;
+  height: 100%;
+  padding: 0 20px;
+  transition: .4s;
+} 
+
+nav .nav-list .nav-item:hover{
+  background: #8e6af2;
+
+}
+
+nav .nav-list .nav-link {
+  color: #232121;
+  font-size: 15px;
+  font-weight: 500;
+
+}
+
+
+.flex-parent {
+
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: flex-start;
-  gap: 2rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  padding: 0 8%;
+  padding-bottom: 6%;
 }
 
-section#big-news h1 {
-  padding: 0.1rem 2rem;
-  font-size: 3rem;
-  text-transform: uppercase;
-   
-}
-
-section#big-news p {
-  padding: 1.2rem 2rem;
-  font-size: 1rem;
-  line-height: 2rem;
+.flex-child-text {
+  display: flex;
+  flex-wrap: wrap;
   
-  
-}
-section#description p {
-  font-family: sans-serif;
 }
 
 .head-image {
-  
   max-width: 600px;
 }
 
 button {
-  margin: 2rem;
-  padding: 1rem 1.4rem;
+  
   background: #deb5fe;
   outline: none;
   border: none;
   font-weight: 700;
   text-transform: uppercase;
   border-radius: 50px;
-  display: flex;
-
-}
-.navbar { 
-
-  height: 150px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  
+  padding: 15px 30px;
   
 }
 
-.navbar .brand {
-
-  padding: 0.75rem 2rem; 
-  margin: 2rem;
-  font-size: 1.1rem;
-  color: white;
-  text-transform: none;
-  font-weight: 300;
-  font-family: sans-serif;
-  background-color: #8461f3;
-  border-radius: 80px;
-  
-}
-
-.navbar .logo {
-  max-width: 150px;
-  padding-left: 4rem;
-  
-}
-
-.navbar-links ul {
-  margin: 0;
-  padding-right: 4rem;
-  display: flex;
-  gap: 3rem;
-  list-style-type: none;
-  font-family: sans-serif;
-      
-}
-
-.navbar-links ul li a {
-  text-decoration: none;
-  
-}
-
-.navbar-links a:link {
-
-  color:black;
-
-}
-
-.navbar-links a:active {
-
-  color:black;
-
-}
-
-.navbar-links a:hover {
-
-  color:#8461f3;
-
-}
-.navbar-links a:visited {
-
-  color:black;
-
-}
-section#less-news {
+.grid-parent {
+  padding: 0 8%;
+  align-items: flex-start;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 2rem;
-  padding: 50px;
-  align-items: center;
+  gap: 10px;
+
+}
+
+.grid-child-1 {
+
+
+}
+
+.article-image {
+  max-width: 250px;
+}
+
+
+@media (min-width: 667px) and (max-width: 1023px) {
+
+nav {
+  padding: 0 2rem;
+}
+
+nav .nav-list .nav-item{
+  padding: 0 20px;
+
+}
+
+nav .navbar-brand  {
+  display: none;
+
+}
+
+
+nav .nav-list {
+  display: flex;
+  list-style: none;
+
+}
+
+/* the part below makes the list section more to the right, not closer to the centre - because of passing 30)*/
+nav .nav-list .nav-item {
+  cursor: crosshair;
+  height: 100%;
+  padding: 0 20px;
+  transition: .4s;
+} 
+
+nav .nav-list .nav-item:hover{
+  background: #8e6af2;
+
+}
+
+nav .nav-list .nav-link {
+  color: #232121;
+  font-size: 13px;
+  font-weight: 500;
+
+}
+
+.flex-parent {
+
+  display: flex;
   justify-content: center;
-  
-  
-}
-
-.grid-item {
-
-  background-color: white;
-  padding: 10px;
   align-items: center;
-  justify-content: center;
+  align-content: flex-start;
+  padding: 0 8%;
+  padding-bottom: 6%;
+  padding-top: 6%;
+  flex-wrap: wrap-reverse;
+  }
   
+.flex-child-text {
+  display: flex;
+  flex-wrap: wrap;
+      
+  }
+  
+.head-image {
+  max-width: 600px;
+  }
+  
+button {
+      
+  background: #deb5fe;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-radius: 50px;
+  padding: 15px 30px;
+      
+  }
+.grid-parent {
+  padding: 0 8%;
+  align-items: flex-start;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
 }
 
-.picturearticle {
-
-    max-width: 250px;
-  
 }
 
-.down {
+@media (max-width: 667px) {
 
-  text-align: center;
-  font-size: 15px;
-
-}
-
-@media (min-width: 668px) and (max-width: 1023px) {
-
-  section#big-news {
-
-      padding: 3rem 1rem;
-      height: 40rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      align-content: flex-start;
-      gap: 0.5rem;
-      
-  }
-
-  section#big-news h1 {
-      padding: 0.5rem 2rem;
-      font-size: 1.5rem;
-      text-transform: uppercase;
-       
-  }
-  
-  section#big-news p {
-      padding: 1rem 2rem;
-      font-size: 0.8rem;
-      line-height: 1.3rem;
-       
-  }
-  .head-image {
-      
-      margin-top: 3rem;
-      margin-right: 1rem;
-      max-width: 20rem;
-
-  }
-
-  .navbar { 
-      height: 120px;
-      position: fixed;
-      width: 95%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 5rem;
-      
-  }
-
-  .navbar .brand {
-
-      display: none;
-     
-}
-
-  .navbar .logo {
-      max-width: 120px;
-      padding-left: 3rem;
-      
-  }
-
-  .navbar-links ul {
-      margin: 0;
-      padding: 1rem 3rem;
-      display: flex;
-      gap: 1.3rem;
-      list-style-type: none;
-      font-family: sans-serif;
-      background-color: #b8a5f8;
-      border-radius: 90px;
-  
-      
-  }
-
-  .navbar-links ul li a {
-      text-decoration: none;
-  
-  }
-
-  .navbar-links ul li a {
-      text-decoration: none;
-      
-  }
-    
-    .navbar-links a:hover {
-  
-      color:#8461f3;
-  
-    }
-  
-    .down {
-
-      text-align: center;
-      font-size: 15px;
-  
-    }
-
-  section#less-news {
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
-    gap: 2rem;
-    padding: 50px;
-    align-items: center;
-    justify-content: center;
-    
-    
-  }
-  
-  .grid-item {
-  
-    background-color: white;
-    padding: 10px;
-    align-items: center;
-    justify-content: center;
-    
-  }
-    
-  }
-
-@media  (max-width: 667px) {
-  
-  section#big-news {
-
-      padding: 3rem 1rem;
-      height: 22rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      align-content: flex-start;
-      gap: 0.5rem;
-      
-  }
-
-  section#big-news h1 {
-      padding: 2rem 2rem;
-      font-size: large;
-      text-transform: uppercase;
-       
-  }
-  
-  section#big-news p {
-      padding: 1rem 2rem;
-      font-size: 0.9rem;
-      line-height: 1.3rem;
-       
-  }
-  .head-image {
-      
-      margin-top: 1rem;
-      max-width: 15rem;
-
-  }
-
-  .navbar { 
-      height: 200px;
-      width: 95%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6rem;
-       
-  }
-
-  .navbar .brand {
-
-      display: none;
-     
-}
-
-  .navbar .logo {
-      max-width: 15rem;
-      padding-left: 3rem;
-      
-  }
-
-  .navbar-links ul {
-      margin: 0;
-      padding: 2rem 1em;
-      display: block;
-      gap: 1.3rem;
-      list-style-type:circle;
-      font-family: sans-serif;
-      font-size: large;
-      
-  }
-
-
-  section#less-news {
+  nav .nav-list {
       display: grid;
-      grid-template-columns: 1fr;
-      gap: 2rem;
-      padding: 50px;
-      align-items: center;
-      justify-content: center;
-      
-      
+      position: absolute;
+      background: grey;
+      width: 100%;  
+      top: 75px;
+      left: 0;
+      transform: translateY(-100%);
+      /* transform: translateY(-100%); */
+      z-index: -1;
+      transition: .6s;
+      list-style: none;
     }
-    
-    .grid-item {
-    
-      background-color: white;
-      padding: 10px;
-      align-items: center;
-      justify-content: center;
-      
+
+    nav .nav-list .nav-item {
+      padding-left: 35px;
     }
+
+    nav .navbar-toggler {
+      display: grid !important;
+      
+}
+
+nav .navbar-toggler {
+  display: none;
+  height: min-content;
+  margin: 18px -10px 0 0;
+  cursor: pointer;
+  
+}
+
+nav .navbar-toggler .bar {
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background: rgb(0, 0, 0);
+  border-radius: 10%;
+  transition: .4s;
+}
+
+input {
+  display: none;
+
+}
+
+input:checked ~ nav .nav-list {
+  transform: translateY(0);
+
+}
+
+input:checked ~ nav .navbar-toggler {
+  margin-top: 35px;
+
+}
+
+input:checked ~ nav .navbar-toggler .bar:nth-child(1) {
+  position: absolute;
+  transform: rotate(45deg);
+
+}
+
+input:checked ~ nav .navbar-toggler .bar:nth-child(2) {
+  display: none;
+}
+input:checked ~ nav .navbar-toggler .bar:nth-child(3) {
+  display: rotate(-45deg);
+
+}
+
+
+.flex-parent {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: flex-start;
+  padding: 0 4%;
+  padding-bottom: 6%;
+  padding-top: 6%;
+  flex-wrap: wrap-reverse;
+  }
+  
+.flex-child-text {
+  display: flex;
+  flex-wrap: wrap;
+      
+  }
+  
+.head-image {
+  max-width: 600px;
+  }
+  
+button {
+      
+  background: #deb5fe;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-radius: 50px;
+  padding: 15px 30px;
+      
+  }
+.grid-parent {
+  padding: 0 3%;
+  align-items: flex-start;
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+.content-important {
+  display: flex;
+  gap: 10px;
+}
+
+.article-intro {
+  display: none;
+}
+  
+
+.article-image {
+  max-width: 200px;
+}
+
 }
