Add cards row three and for

--- a/code/style.css
+++ b/code/style.css
@@ -200,10 +200,7 @@ a:hover {
   margin: 5px 20px 5px 20px;
 }
 
-.img-other-news-one,
-.img-other-news-two,
-.img-other-news-three,
-.img-other-news-four {
+.img-other-news {
   display: flex;
   height: 60%;
   max-width: 90%;
