added new pages, updated all links on the website

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,4 @@
-body {
+html, body {
 
   margin: 0;
   padding: 0;
@@ -6,8 +6,19 @@ body {
   outline: 0;
   text-decoration: none;
   font-family: 'Open Sans', sans-serif;
+  height: 100%;
 
+}
+
+h2 {
   
+  font-size: large;
+
+}
+
+h3 {
+
+  font-size: medium;
 }
 
 nav {
@@ -50,7 +61,7 @@ nav .nav-list .nav-item {
 } 
 
 nav .nav-list .nav-item:hover{
-  background: #8e6af2;
+  background: hsl(256, 84%, 68%);
 
 }
 
@@ -62,9 +73,31 @@ nav .nav-list .nav-link {
 }
 
 
+a:link {
+
+  color:black;
+
+}
+
+a:visited {
+
+  color:black;
+
+}
+
+a:active {
+  color:rgb(11, 11, 136);
+}
+
+a:hover {
+  color:hsl(256, 84%, 68%);
+}
+
+
 .flex-parent {
 
   display: flex;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
   align-content: flex-start;
@@ -99,18 +132,50 @@ button {
   align-items: flex-start;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 10px;
-
-}
-
-.grid-child-1 {
-
+  gap: 15px;
+  margin-bottom: 5%;
 
 }
 
 .article-image {
-  max-width: 250px;
+  max-width: 280px;
+
+
 }
+
+.image-articlepage {
+  max-width: 800px;
+ 
+}
+
+.flex-newspage {
+
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content:flex-start;
+  align-content: flex-start;
+  padding: 0 8%;
+  padding-bottom: 6%;
+  margin: 2%;
+  
+  
+}
+
+
+.down {
+
+  font-size: 12px;
+  padding: 1%;
+  background-color: #deb5fe;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), hsl(256, 84%, 68%));
+}
+
+input {
+  display: none;
+
+}
+
 
 
 @media (min-width: 667px) and (max-width: 1023px) {
@@ -197,30 +262,58 @@ button {
   gap: 10px;
 }
 
+.article-image {
+  max-width: 320px;
+
+}
+
+.image-articlepage {
+  max-width: 667px;
+ 
+}
+
+input {
+  display: none;
+
+}
+
 }
 
 @media (max-width: 667px) {
 
-  nav .nav-list {
+  nav .nav-list  {
       display: grid;
       position: absolute;
-      background: grey;
+      background: rgb(255, 255, 255);
       width: 100%;  
       top: 75px;
       left: 0;
       transform: translateY(-100%);
       /* transform: translateY(-100%); */
-      z-index: -1;
+      z-index: 1;
       transition: .6s;
       list-style: none;
+
+  }
+
+    nav .navbar-brand .navbar-logo {
+      color:rgb(125, 31, 137);
+      font-size: 28px;
+      font-weight: 500;
+      letter-spacing: .2px;
+  
+  }
+
+  nav .navbar-brand {
+      display: none;
+  }
+
+  nav .nav-list .nav-item {
+      padding-left: 15px;
     }
 
-    nav .nav-list .nav-item {
-      padding-left: 35px;
-    }
-
-    nav .navbar-toggler {
-      display: grid !important;
+  nav .navbar-toggler {
+     display: grid !important;
       
 }
 
@@ -266,11 +359,13 @@ input:checked ~ nav .navbar-toggler .bar:nth-child(2) {
   display: none;
 }
 input:checked ~ nav .navbar-toggler .bar:nth-child(3) {
-  display: rotate(-45deg);
+  transform: rotate(-45deg);
 
 }
 
-
+.big-news-article {
+  align-items: center;
+}
 .flex-parent {
 
   display: flex;
@@ -278,20 +373,26 @@ input:checked ~ nav .navbar-toggler .bar:nth-child(3) {
   align-items: center;
   align-content: flex-start;
   padding: 0 4%;
-  padding-bottom: 6%;
+  padding-bottom: 8%;
   padding-top: 6%;
   flex-wrap: wrap-reverse;
   }
   
 .flex-child-text {
   display: flex;
-  flex-wrap: wrap;
-      
+  
+  
   }
   
 .head-image {
-  max-width: 600px;
+  max-width: 667px;
+  
   }
+
+.image-articlepage {
+      max-width: 500px;
+     
+    }
   
 button {
       
@@ -305,7 +406,7 @@ button {
       
   }
 .grid-parent {
-  padding: 0 3%;
+  padding: 2% 3%;
   align-items: flex-start;
   display: grid;
   flex-wrap: wrap;
@@ -327,4 +428,9 @@ button {
   max-width: 200px;
 }
 
+.down {
+
+  display: none;
+
+}
 }
