--- a/code/style.css
+++ b/code/style.css
@@ -28,12 +28,13 @@ h1 {
 }
 
 h2,
-h3 {
+h3,
+h4 {
   font-family: var(--headings-font-family);
   font-weight: lighter;
 }
 
-h4 {
+h5 {
   text-align: center;
   font-family: var(--second-headings-font-family);
   font-size: 32px;
@@ -164,13 +165,13 @@ a:hover {
 }
 
 .video-big-news-one {
-  height: 60%;
-  max-width: 90%;
+  height: 70%;
+  max-width: 100%;
 }
 
 .video-big-news-two {
-  max-height: 20%;
-  max-width: 50%;
+  max-height: 50%;
+  max-width: 70%;
 }
 
 .video-big-news-two-figcaption {
@@ -218,6 +219,7 @@ a:hover {
   color: var(--primary-text-color);
   width: 215px;
   text-decoration: underline;
+  text-align: center;
 }
 
 .primary-link:hover {
