--- a/code/style.css
+++ b/code/style.css
@@ -141,13 +141,12 @@ li a:hover {
   grid-area: 1 / 1 / 2 / 5;
   flex-direction: column;
   align-items: center;
-  margin: 30px 0 0 0;
+  margin: 30px 10px 0 10px;
   opacity: 0.8;
 }
 
 .img-spain {
   height: 280px;
-  width: 350px;
   border: solid rgb(128, 128, 128) 1px;
   border-radius: 10%;
 }
@@ -325,7 +324,6 @@ footer h4 {
 
   .img-spain {
     height: 400px;
-    width: 600px;
   }
 
   /*News grid section tablet start*/
@@ -403,7 +401,7 @@ footer h4 {
 
   .img-spain {
     height: 400px;
-    width: auto;
+    width: 650px;
     margin: 20px 0 0 0;
   }
 
