--- a/code/style.css
+++ b/code/style.css
@@ -170,14 +170,14 @@ h2 {
 }
 
 .small-img {
-  width: 170px;
+  width: 50%;
   height: 175px;
   padding: 0;
-  margin: 0;
+  margin-right: 5px;
 }
 
 h4 {
-  width: 170px;
+  width: 48%;
   height: 30px;
   font-size: 15px;
   color: #fff;
@@ -186,7 +186,7 @@ h4 {
 }
 
 .p-medium {
-  width: 175px;
+  width: 48%;
   font-size: 14px;
   font-weight: 300;
   color: #fff;
