--- a/code/style.css
+++ b/code/style.css
@@ -341,17 +341,19 @@ footer {
   }
 
   .small-img {
-    height: 100%;
+    width: 100%;
     margin: 0 0 10px 0;
   }
 
   h4 {
-    width: 150px;
+    width: 170px;
+    height: 10%;
     padding: 0 0 8px 0;
   }
 
   .p-medium {
-    max-width: 150px;
+    width: 170px;
+    height: 40%;
     padding: 0 0 8px 0;
   }
 
