--- a/code/style.css
+++ b/code/style.css
@@ -3,56 +3,132 @@ html {
   color: #fff;
 }
 
-img {
-  width: 600px;
-
-}
-
-.flex-parent {
-  display: flex; 
-  min-height: 100vh; 
-  flex-direction: column; 
-  border: 2px solid blue; 
-}
-
-title {
-  text-color: black;  
+body {
+  font-family:Verdana, Geneva, Tahoma, sans-serif; 
+  margin; 0;
 }
 
 header {
-  text-color: purple; 
-  background-color: pink; 
-  font-size: 50px;
+  font-size:50px; 
 }
 
 .header img {
   float: left; 
   width: 50px; 
   height: 50px; 
+  border-radius: 70%;
   background: #555; 
+  margin: 5px; 
 }
 
 .header {
-  position: relative; 
-  top: 18px; 
-  left: 10px;
+  display:flex; 
+  flex-direction: row;
+  color: purple; 
+  background-color: rgb(229, 215, 217); 
+  padding: .5em 1em; 
+}
+  .header::after {
+    content: ""; 
+    display: flex; 
+    clear: both; 
+  }
+
+  .site-identity {
+    float:left;
+  }
+
+  .site-identity h1 {
+    font-size: 40px;
+    margin: 0 0 0 0;
+    display: inline-block;
+  }
+
+  .site.identity img {
+    max-width: 55px; 
+    float: left; 
+    margin: 0 10px 0 0; 
+    }
+  
+    .site-navigation {
+      margin: 0; 
+      padding: 0; 
+    }
+    .site-navigation li {
+      display: inline-block;
+      margin: 1.4em 1em 1em 1em;
+    }
+
+
+ a {
+  margin: 10px; 
+  text-decoration: none; 
+  color: purple; 
+
  }
 
- .topnav {
-  position:relative; 
-  top: 18px; 
-  left: 10px;
+ .big-news {
+  display: grid; 
+  flex-direction: row; 
  }
 
+ .big-news-content img {
+  width: 600px;
+  margin: 25px; 
+
+}
+ 
+
+.big-news-content {
+  font-family:Verdana, Geneva, Tahoma, sans-serif; 
+  font-size:14px; 
+  display: flex; 
+  flex-direction: row; 
+}
 
 
- .other-news {
-  margin: 6px blue solid;  
-  Width: 150px; 
-  background-color: lightblue;
+h1 {
+  font-size: 40px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  gap: 10px;  
+}
+
+.big-news {
+  font-weight: 500;
+  color: black; 
+  display: grid;
+  justify-content: center; 
+  grid-template-columns: span 4; 
+  align-items:stretch; 
+
+}
+
+.other-news {
+  margin: 20px;
+  border: 2px solid black;  
+  width: 250px; 
+  height: 250px; 
+  background: rgb(213, 226, 231);
+  display: grid; 
+  grid-template-columns: repeat(4, 1fr);
+  font-size: 20px; 
  }
 
  .one {
-  background-color: grey; 
-
+  background: orange; 
  }
+
+ .two {
+  background: lightpink; 
+ }
+
+ .three {
+  background: lightgreen;
+ }
+
+ p {
+  font-weight: 500;
+  color: black; 
+  font-family:Verdana, Geneva, Tahoma, sans-serif
+ }
+
