add meta tag and alttexts, remove style from html

--- a/code/style.css
+++ b/code/style.css
@@ -78,6 +78,11 @@ ul li a:hover {
   transition: 0.4s;
 }
 
+.logo,
+.logo-navbar {
+  height: 50px;
+}
+
 .site-name,
 #nav-toggle,
 .logo-navbar,
@@ -114,7 +119,7 @@ ul li a:hover {
   overflow: hidden;
 }
 
-.breaking {  
+.breaking-text {  
   text-align: center;
   text-transform: uppercase;
   color: white;
