--- a/code/style.css
+++ b/code/style.css
@@ -12,13 +12,13 @@ header {
   font-size:50px; 
 }
 
-.header img {
+.logo {
   float: left; 
   width: 50px; 
   height: 50px; 
   border-radius: 70%;
   background: #555; 
-  margin: 5px; 
+  margin: 22px; 
 }
 
 .header {
@@ -36,11 +36,13 @@ header {
 
   .site-identity {
     float:left;
+    display:flex;
+    justify-content:space-between;
   }
 
-  .site-identity h1 {
+  .header-name {
     font-size: 40px;
-    margin: 0 0 0 0;
+    margin: 40px 0 20px 0;
     display: inline-block;
   }
 
@@ -51,12 +53,11 @@ header {
     }
   
     .site-navigation {
-      margin: 0; 
-      padding: 0; 
-    }
-    .site-navigation li {
+      padding: 0;       
       display: inline-block;
-      margin: 1.4em 1em 1em 1em;
+      margin: 6.4em 0em 0em 21em;
+      overflow: hidden; 
+      
     }
 
 
@@ -64,6 +65,7 @@ header {
   margin: 10px; 
   text-decoration: none; 
   color: purple; 
+  }
 
  }
 
@@ -72,14 +74,14 @@ header {
   flex-direction: row; 
  }
 
- .big-news-content img {
+ .big-news-img {
   width: 600px;
   margin: 25px; 
 
 }
  
 
-.big-news-content {
+.big-news-text {
   font-family:Verdana, Geneva, Tahoma, sans-serif; 
   font-size:14px; 
   display: flex; 
@@ -87,7 +89,9 @@ header {
 }
 
 
-h1 {
+
+
+.header-name {
   font-size: 40px;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   gap: 10px;  
@@ -130,5 +134,7 @@ h1 {
   font-weight: 500;
   color: black; 
   font-family:Verdana, Geneva, Tahoma, sans-serif
+  display:block; 
  }
+
 
