--- a/code/style.css
+++ b/code/style.css
@@ -16,12 +16,7 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-/*body {
-  margin: 0 80px;
-}*/
-
 h1 {
-  /*text-align: center;*/
   font-family: var(--logo-name-font-family);
   font-size: 48px;
   font-weight: normal;
@@ -156,7 +151,9 @@ a:hover {
 }
 
 .img-big-news-one,
-.img-big-news-two {
+.img-big-news-two,
+.video-big-news-one,
+.video-big-news-two {
   border: var(--border-color) inset 5px;
 }
 
@@ -168,18 +165,14 @@ a:hover {
   text-align: center;
 }
 
-.video-big-news-one,
-.video-big-news-two {
-  display: flex;
-  border: var(--border-color) inset 5px;
-}
-
 .video-big-news-one {
+  display: flex;
   height: 70%;
   max-width: 100%;
 }
 
 .video-big-news-two {
+  display: flex;
   max-height: 50%;
   max-width: 70%;
 }
@@ -259,7 +252,6 @@ a:hover {
 }
 
 /*footer*/
-
 .footer {
   margin-top: 50px;
 }
@@ -427,6 +419,17 @@ a:hover {
 
   .img-big-news-one,
   .img-big-news-two {
+    margin: 20px;
+  }
+
+  .video-big-news-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .video-big-news-one,
+  .video-big-news-two {
     margin: 20px;
   }
 
