--- a/code/style.css
+++ b/code/style.css
@@ -6,16 +6,11 @@ body {
   height: 40px;
   background-color: rgba(239,199,29,0.6);
   display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 .logotype {
   max-width: 400px;
 }
-.logo {
-  
-}
-.navbar-menu{
+.navbar-links {
   color: darkslategray;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 18px;
