--- a/code/style.css
+++ b/code/style.css
@@ -1,27 +1,61 @@
-html {
-  background: whitesmoke;
-  color: #fff;
-}
-
+  
 body {
   font-family:Verdana, Geneva, Tahoma, sans-serif; 
   margin; 0;
+  background: lightpink;
+  color:rgb(213, 226, 231);
 }
 
-header {
-  font-size:50px; 
+@media (max-width: 667px)
+.grid-parent {
+grid-template-columns: 1fr; 
+gap: 15px; 
+max-width: 90%;
+
 }
 
+@media (min-width: 667px) and (max-width:1024px) {
+ .grid-parent {
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 15px; 
+
+  }
+
+}
+
+@media (min-width: 1024px) {
+.grid-parent {
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 15px; 
+    padding-inline: ;
+
+  }
+}
+
+.grid-parent {
+  display: grid; 
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+
+}
+
+.header-name {
+  font-size: 40px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  display: flex;
+  align-items: center;
+  color: purple; 
+
+}
 .logo {
   float: left; 
-  width: 50px; 
-  height: 50px; 
+  width: 125px; 
+  height: 125px; 
   border-radius: 70%;
-  background: #555; 
   margin: 22px; 
 }
 
-.header {
+.header-flex-parent {
   display:flex; 
   flex-direction: row;
   color: purple; 
@@ -40,11 +74,7 @@ header {
     justify-content:space-between;
   }
 
-  .header-name {
-    font-size: 40px;
-    margin: 40px 0 20px 0;
-    display: inline-block;
-  }
+
 
   .site.identity img {
     max-width: 55px; 
@@ -52,11 +82,11 @@ header {
     margin: 0 10px 0 0; 
     }
   
-    .site-navigation {
+    .nav-bar {
       padding: 0;       
-      display: inline-block;
+      display: flex;
+      align-items: flex-end;
       margin: 6.4em 0em 0em 21em;
-      overflow: hidden; 
       
     }
 
@@ -69,66 +99,51 @@ header {
 
  }
 
- .big-news {
-  display: grid; 
-  flex-direction: row; 
- }
 
- .big-news-img {
-  width: 600px;
+ .big-news img {
+  width: 400px;
   margin: 25px; 
 
 }
  
 
-.big-news-text {
-  font-family:Verdana, Geneva, Tahoma, sans-serif; 
-  font-size:14px; 
-  display: flex; 
-  flex-direction: row; 
-}
-
-
-
-
-.header-name {
-  font-size: 40px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  gap: 10px;  
-}
-
 .big-news {
-  font-weight: 500;
+  margin: 40px; 
+  padding: 30px; 
+  background-color: ivory;
   color: black; 
   display: grid;
   justify-content: center; 
   grid-template-columns: span 4; 
   align-items:stretch; 
+}
+
+.big-news h2 {
+  font-size: 40px; 
+  text-align:center; 
+
+}
+
+
+.other-news-parent {
+  display: grid; 
+  grid-template-columns: 1fr
+  grid-template-rows:1fr;
+  width: auto;
+  column-gap: 10px;
+  row-gap: 15px; 
 
 }
 
 .other-news {
   margin: 20px;
-  border: 2px solid black;  
-  width: 250px; 
-  height: 250px; 
   background: rgb(213, 226, 231);
-  display: grid; 
-  grid-template-columns: repeat(4, 1fr);
   font-size: 20px; 
- }
+  display: grid; 
+  padding: 20px; 
+  color: black;
+  justify-content: space-around;
 
- .one {
-  background: orange; 
- }
-
- .two {
-  background: lightpink; 
- }
-
- .three {
-  background: lightgreen;
- }
 
  p {
   font-weight: 500;
@@ -137,4 +152,14 @@ header {
   display:block; 
  }
 
+.grid-item img {
+  width: 100%; 
+  height: 40%;
+  aspect-ratio: 1/2;
+  object-fit: cover; 
 
+}
+
+.other-news h3 {
+  font-size: 40px;
+}
