Change image responsivity

--- a/code/style.css
+++ b/code/style.css
@@ -145,9 +145,11 @@ a:hover {
 .img-big-news-one,
 .img-big-news-two,
 .img-big-news-illustration-one {
-  display: flex;
-  height: 60%;
-  max-width: 90%;
+  /*display: flex;*/
+  /*height: 60%;
+  max-width: 90%;*/
+  width: 100%;
+  height: auto;
 }
 
 .img-big-news-one,
