Fix video responsivity

--- a/code/style.css
+++ b/code/style.css
@@ -165,15 +165,13 @@ a:hover {
 }
 
 .video-big-news-one {
-  display: flex;
-  height: 70%;
-  max-width: 100%;
+  width: 100%;
+  height: auto;
 }
 
 .video-big-news-two {
-  display: flex;
-  max-height: 50%;
-  max-width: 70%;
+  width: 100%;
+  height: auto;
 }
 
 .video-big-news-two-figcaption {
