--- a/code/style.css
+++ b/code/style.css
@@ -105,6 +105,8 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  align-items: center;
+  justify-content: center;
 
   position: relative;
   top: 0;
@@ -117,21 +119,23 @@ body {
 }
 
 
+.card .thumb img{
+  max-width: 100%;
+  height: auto;
+   
+}
+
 .card article {
   padding: 20px;
   flex: 1;
   
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 
-.card .thumb {
-  padding-bottom: 60%;
-  background-size: cover;
-  background-position: center center;
-}
+
 
 /* typography */
 .card h1 {
